--- a/i18n/en.json
+++ b/i18n/en.json
@@ -306,6 +306,7 @@
     "transport_you_are_there": "(You are there)",
     "only_walk": "Use alt to walk!",
     "vehicle_full": "Your vehicle is full!",
+    "police_station": "Police Station",
     "police_garage": "Police Garage",
     "police_garage_menu": "Police Garage",
     "not_police": "You are not a police officer!",
