--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -261,7 +261,13 @@
     "job_full": "Ce métier est complet !",
     "police_job": "Officier de police",
     "police_menu": "Menu Police",
-    "start_stop_police": "Commencer / Arrêter son service",
+    "start_police": "Commencer son service",
+    "stop_police": "Arrêter son service",
+    "police_npc_name": "Ralph, Capitaine",
+    "police_npc_message_start": "Salut, tu veux prendre ton service ?",
+    "police_npc_message_stop": "Salut, tu veux arrêter ton service ?",
+    "police_npc_end_start": "Ok, fais attention à toi petit.",
+    "npc_end_stop": "Ok, à plus tard!",
     "call_backup": "Appeler des renforts",
     "background_check": "Vérifier les antécédents",
     "put_uniform": "Changer de tenue",
@@ -307,13 +313,16 @@
     "transport_you_are_there": "(Vous y êtes)",
     "stylist": "Changer d'apparence",
     "yes": "Oui",
+    "no": "Non",
+    "leave": "partir",
     "choose": "Choisir",
-    "only_walk": "Use alt to walk!",
-    "vehicle_full": "Your vehicle is full!",
-    "police_garage": "Police Garage",
-    "police_garage_menu": "Police Garage",
-    "not_police": "You are not a police officer!",
-    "police_armory": "Police Armory",
-    "get_equipped": "Get equipped",
-    "paid_fine_giver": "The player paid his fine"
+    "only_walk": "Utilisez <alt> pour marcher!",
+    "vehicle_full": "Votre véhicule est plein!",
+    "police_station": "Commisariat",
+    "police_garage": "Garage Police",
+    "police_garage_menu": "Garage Police",
+    "not_police": "Vous ne faites pas parti de la Police!",
+    "police_armory": "Armurerie Police",
+    "get_equipped": "S'équiper",
+    "paid_fine_giver": "Cette personne a payé son amende"
 }
