Add inventory GUI

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -312,7 +312,7 @@
     "paid_fine_giver": "The player paid his fine",
     "stylist": "Changer d'apparence",
     "yes": "Oui",
-    "no": "Oui",
+    "no": "Non",
     "choose": "Choisir",
     "price_in_currency": "{1}€",
     "medic_menu": "Medic Menu",
