Log library and admin TPs

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -226,6 +226,14 @@
     "received_transfer": "Vous avez reçu {1} {2} de {3}",
     "desert_town": "Les Entrepôts",
     "old_town": "Motel & Camping",
+    "police_station": "Commisariat",
+    "mine": "Mine",
+    "circuit": "Circuit",
+    "airport": "Aéroport",
+    "harbour": "Port",
+    "western": "Ouest",
+    "mountain": "Montagnes",
+    "training": "Lieu d'entrainement",
     "select_city": "Veuillez choisir une ville !",
     "spawn_menu": "Menu de spawn",
     "vehicle_health": "État du véhicule :",
